--- a/Pametna Kuca/HomeAppliances/HomeAppliances.csproj
+++ b/Pametna Kuca/HomeAppliances/HomeAppliances.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Appliance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
