Implementirane klase Appliance Communication za prijem i slanje poruke, dodane metode za prikaz korisnika, porta, lozinke.

--- a/Pametna Kuca/ApplianceCommunication/ApplianceCommunication.csproj
+++ b/Pametna Kuca/ApplianceCommunication/ApplianceCommunication.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Coms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HomeAppliances\HomeAppliances.csproj">
+      <Project>{6a8d78c0-e8e3-49ea-8391-1340dd29c156}</Project>
+      <Name>HomeAppliances</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
