--- a/Pametna Kuca/HomeAppliances/HomeAppliances.csproj
+++ b/Pametna Kuca/HomeAppliances/HomeAppliances.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6A8D78C0-E8E3-49EA-8391-1340DD29C156}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>HomeAppliances</RootNamespace>
     <AssemblyName>HomeAppliances</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
