--- a/Pametna Kuca/UserLibrary/UserLibrary.csproj
+++ b/Pametna Kuca/UserLibrary/UserLibrary.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{22024111-4DCE-4D67-9D44-324936E1126A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>UserLibrary</RootNamespace>
     <AssemblyName>UserLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
