--- a/Pametna Kuca/Pametna Kuca/Pametna Kuca.csproj
+++ b/Pametna Kuca/Pametna Kuca/Pametna Kuca.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UserLibrary\UserLibrary.csproj">
+      <Project>{22024111-4dce-4d67-9d44-324936e1126a}</Project>
+      <Name>UserLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
